Fixed colors jumping

--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -22,20 +22,23 @@ body {
             background: #6a1b9a;
         }
 
-        25% {
+        20% {
             background: #c62828;
         }
 
-        50% {
+        40% {
             background: #fbc02d;
         }
 
-        75% {
+        60% {
             background: #2e7d32;
         }
 
-        100% {
+        80% {
             background: #283593;
+        }
+        100% {
+            background: #6a1b9a;
         }
     }
 }
